@@ -355,9 +355,13 @@ wxEVT_JOY_MOVE = wx.misc.wxEVT_JOY_MOVE
 wxEVT_JOY_ZMOVE = wx.misc.wxEVT_JOY_ZMOVE
 wxJoystickEvent = wx.misc.JoystickEvent
 wxJoystickEventPtr = wx.misc.JoystickEventPtr
-wxWave = wx.misc.Wave
-wxWavePtr = wx.misc.WavePtr
-wxWaveData = wx.misc.WaveData
+wxSOUND_SYNC = wx.misc.SOUND_SYNC
+wxSOUND_ASYNC = wx.misc.SOUND_ASYNC
+wxSOUND_LOOP = wx.misc.SOUND_LOOP
+wxSound = wx.misc.Sound
+wxSoundPtr = wx.misc.SoundPtr
+wxSound_PlaySound = wx.misc.Sound_PlaySound
+wxSound_Stop = wx.misc.Sound_Stop
 wxMAILCAP_STANDARD = wx.misc.MAILCAP_STANDARD
 wxMAILCAP_NETSCAPE = wx.misc.MAILCAP_NETSCAPE
 wxMAILCAP_KDE = wx.misc.MAILCAP_KDE
